src/test/deca/context/valid/shadowing.deca

// Description :
// Redefinition d'une variable dans un bloc interne

// Resultats :
// ok


{
  int x = 1;
  if(true) {
    int x = 2;
    println(x);
  }
  println(x);
}
