src/test/deca/context/invalid/classe_utilisee_comme_expression.deca
// Description :
// Utilisation d'un identifiant de type (classe) comme une expression. or le print a bosein d un abstractexpression

// Resultats :
// Echec

class Derby {
    int annee;
}

{
    print(Derby);
}
